@@ -30,6 +30,11 @@
 // The highest value at which an item can be sold via the merchant vend skill. (in zeny) (Note 3)
 vending_max_value: 1000000000
 
+// Tax to apply to all vending transactions (eg: 10000 = 100%, 50 = 0.50%)
+// When a tax is applied, the item's full price is charged to the buyer, but
+// the vender will not get the whole price paid (they get 100% - this tax).
+vending_tax: 0
+
 // Show the buyer's name when successfully vended an item
 buyer_name: yes
 
